Improve punctuation consistency

--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -2203,7 +2203,7 @@
                             <li>Come to the reception desk</li>
                             <li>Speak to a security guard</li>
                             <li>Contact an event volunteer</li>
-                            <li>Email <a href="mailto:safety@rustforgeconf.com">safety@rustforgeconf.com</a></li>
+                            <li>Email <a href="mailto:safety@rustforgeconf.com">&lt;safety@rustforgeconf.com&gt;</a></li>
                             <li>In the Discord server, tag members with the #safety role</li>
                         </ul>
 
@@ -2217,7 +2217,7 @@
                     If you would like to raise a possible safety concern before the event or offer advice to prevent
                     breaches of the code of conduct: </p>
                     <ul class="arrow">
-                        <li>Email <a href="mailto:safety@rustforgeconf.com">safety@rustforgeconf.com</a></li>
+                        <li>Email <a href="mailto:safety@rustforgeconf.com">&lt;safety@rustforgeconf.com&gt;</a></li>
                     </ul>
                 </div>
 
@@ -2226,8 +2226,8 @@
                     <p>
                     To notify us of an issue after the event has finished, then please use one of these channels: </p>
                     <ul class="arrow">
-                        <li>Email <a href="mailto:safety@rustforgeconf.com">safety@rustforgeconf.com</a></li>
-                        <li>Contact the New Zealand <a href="https://www.police.govt.nz/use-105">Police via 105</a></li>
+                        <li>Email <a href="mailto:safety@rustforgeconf.com">&lt;safety@rustforgeconf.com&gt;</a></li>
+                        <li>Contact the <a href="https://www.police.govt.nz/use-105">Police via 105</a></li>
                     </ul>
                 </div>
 
@@ -2235,15 +2235,16 @@
 
                     <h3>Anonymous Reports</h3>
 
-                    <p>If you would like to raise a complaint avoid revealing your name to the event's organizers, then
+                    <p>
+                    If you would like to raise a complaint avoid revealing your name to the event's organizers, then
                     please:</p>
 
                     <ul class="arrow">
-                        <li>Contact the Rust Project's moderation team <a href="mailto:rust-mods@rust-lang.org">rust-mods@rust-lang.org</a>
+                        <li>Contact the Rust Project's moderation team <a href="mailto:rust-mods@rust-lang.org">&lt;rust-mods@rust-lang.org&gt;</a>
                         </li>
                     </ul>
 
-                    <p><em>Note:</em> The mod team may be required to disclose your identity in some circumstances.</p>
+                    <p><em>Note:</em> The mod team may be required to disclose your identity, but will not do so before asking you.</p>
                 </div>
 
             </div> <!-- /#conduct-blocks -->
