Improve wording around anonymity protection

--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -2244,7 +2244,7 @@
                         </li>
                     </ul>
 
-                    <p><em>Note:</em> The mod team may be required to disclose your identity, but will not do so before asking you.</p>
+                    <p><em>Note:</em> The moderation team accepts anonymous submissions, but may be limited in their response if you wish to remain anonymous.</p>
                 </div>
 
             </div> <!-- /#conduct-blocks -->
