Prevent Shed 6 from flowing across lie
May reduce confusion in an emergency.

--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -2191,8 +2191,8 @@
                         <p>
                         <em>In an emergency, dial 111</em> from any phone and ask to speak to the Police. </p>
                         <ul class="arrow">
-                            <li>111 is New Zealand's emergency number.</li>
-                            <li>The event venue's address as "Shed 6, Queens Wharf, Wellington".</li>
+                            <li>111 is New Zealand's emergency number</li>
+                            <li>The event venue's address as "Shed&nbsp;6, Queens Wharf, Wellington"</li>
                         </ul>
                     </div>
 
