Use action rather than target

--- a/beta.rustforgeconf.com/index.html
+++ b/beta.rustforgeconf.com/index.html
@@ -2318,7 +2318,7 @@
                 <p><strong>We&rsquo;re excited to hear from you!</strong></p>
                 <p><strong><a href="mailto:hello@rustforgeconf.com?subject=Considering%20(attending%7Cspeaking%7Cvolunteering)%20at%20Rust%20Forge%202025">&lt;hello@rustforgeconf.com&gt;</a></strong></p>
                 <!-- TODO: fix this form -->
-                <form enctype="application/x-www-form-urlencoded" id="form02" method="post" target="/sign-up" data-autofocus="1">
+                <form enctype="application/x-www-form-urlencoded" id="form02" method="post" action="/sign-up" data-autofocus="1">
 
                     <div class="field" data-type="email">
                         <input type="email" name="email" placeholder="iloverust@example.com" maxlength="128" required="">
