Hide nav for now

--- a/beta.rustforgeconf.com/index.html
+++ b/beta.rustforgeconf.com/index.html
@@ -2353,43 +2353,44 @@
 <footer>
 <div class="row">
     <div class="col">
-        <div class="section">
-            <div>
-                <h3>General Information</h3>
-                <ul class="arrow">
-                    <li><a href="#intro">Top of the page</a></li>
-                    <li><a href="#get-involved">Get involved</a></li>
-                    <li><a href="#what-is-rust-forge">What is Rust Forge?</a></li>
-                    <li><a href="#where-and-when">Where and When?</a></li>
-                    <li><a href="#participate">How to Participate</a></li>
-                </ul>
-            </div>
+<!--        TODO: NAVIGATION -->
 
-            <div>
-                <h3>For delegates</h3>
-                <ul class="arrow">
-                    <li><a href="#workshop">How to Adopt Rust Workshop</a></li>
-                    <li><a href="#networking">Co-creation Days</a></li>
-                    <li><a href="#conference">Conference</a></li>
-                    <li><a href="#interested">Sign up</a></li>
-                </ul>
-            </div>
+<!--        <div class="section">-->
+<!--            <div>-->
+<!--                <h3>General Information</h3>-->
+<!--                <ul class="arrow">-->
+<!--                    <li><a href="#intro">Top of the page</a></li>-->
+<!--                    <li><a href="#get-involved">Get involved</a></li>-->
+<!--                    <li><a href="#what-is-rust-forge">What is Rust Forge?</a></li>-->
+<!--                    <li><a href="#where-and-when">Where and When?</a></li>-->
+<!--                    <li><a href="#participate">How to Participate</a></li>-->
+<!--                </ul>-->
+<!--            </div>-->
 
+<!--            <div>-->
+<!--                <h3>For delegates</h3>-->
+<!--                <ul class="arrow">-->
+<!--                    <li><a href="#workshop">How to Adopt Rust Workshop</a></li>-->
+<!--                    <li><a href="#networking">Co-creation Days</a></li>-->
+<!--                    <li><a href="#conference">Conference</a></li>-->
+<!--                    <li><a href="#interested">Sign up</a></li>-->
+<!--                </ul>-->
+<!--            </div>-->
 
-            <div>
-                <h3>For teams</h3>
-                <ul class="arrow">
-                    <li><a href="#spaces">Team spaces</a></li>
-                    <li>
-                        <a href="#sponsorship">Sponsorship options</a>
-                        <ul>
-                            <li><a href="forge-sponsorship">Forge</a></li>
-                            <li><a href="furnace-sponsorship">Furnace</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#interested">Sign up</a></li>
-                </ul>
-            </div>
+<!--            <div>-->
+<!--                <h3>For teams</h3>-->
+<!--                <ul class="arrow">-->
+<!--                    <li><a href="#spaces">Team spaces</a></li>-->
+<!--                    <li>-->
+<!--                        <a href="#sponsorship">Sponsorship options</a>-->
+<!--                        <ul>-->
+<!--                            <li><a href="forge-sponsorship">Forge</a></li>-->
+<!--                            <li><a href="furnace-sponsorship">Furnace</a></li>-->
+<!--                        </ul>-->
+<!--                    </li>-->
+<!--                    <li><a href="#interested">Sign up</a></li>-->
+<!--                </ul>-->
+<!--            </div>-->
 
             <div id="footer-layout">
                 <p>
