More layout fixes

--- a/beta.rustforgeconf.com/index.html
+++ b/beta.rustforgeconf.com/index.html
@@ -1408,7 +1408,7 @@
                     <p><em><a href="mailto:hello@rustforgeconf.com?subject=Considering%20(attending%7Cspeaking%7Cvolunteering)%20at%20Rust%20Forge%202025">&lt;hello@rustforgeconf.com&gt;</a></em></p>
                 </div>
 
-                <div class="section" id="mailing-list">
+                <div id="mailing-list">
                     <div class="form-box">
                         <h3>Mailing list</h3>
                         Receive updates as planning develops. There's no commitment. ♥</p>
