More layout fixes

--- a/beta.rustforgeconf.com/index.html
+++ b/beta.rustforgeconf.com/index.html
@@ -1399,11 +1399,7 @@
 
                 <div class="form-box">
                     <h3>Contact us</h3>
-                    <p>Do <a href="mailto:hello@rustforgeconf.com?subject=Considering%20(attending%7Cspeaking%7Cvolunteering)%20at%20Rust%20Forge%202025">send us a message</a>,
-                        especially to let us know if you'd like to
-                        <em><a href="mailto:hello@rustforgeconf.com?subject=Considering%20attending%20Rust%20Forge%202025">attend</a></em>,
-                        <em><a href="mailto:hello@rustforgeconf.com?subject=Considering%20speaking%20Rust%20Forge%202025">speak</a></em>, or
-                        <em><a href="mailto:hello@rustforgeconf.com?subject=Considering%20volunteering%20Rust%20Forge%202025">volunteer</a></em>.
+                    <p>Questions are welcome!</p>
 
                     <p><em><a href="mailto:hello@rustforgeconf.com?subject=Considering%20(attending%7Cspeaking%7Cvolunteering)%20at%20Rust%20Forge%202025">&lt;hello@rustforgeconf.com&gt;</a></em></p>
                 </div>
@@ -1411,7 +1407,7 @@
                 <div id="mailing-list">
                     <div class="form-box">
                         <h3>Mailing list</h3>
-                        Receive updates as planning develops. There's no commitment. ♥</p>
+                        <p>Receive updates as planning develops. There's no commitment. ♥</p>
                         <form enctype="application/x-www-form-urlencoded" id="form01" method="post" action="/sign-up" data-autofocus="1">
 
                             <div class="field" data-type="email">
