--- a/beta.rustforgeconf.com/index.html
+++ b/beta.rustforgeconf.com/index.html
@@ -1393,8 +1393,8 @@
                 </div>
 
                 <div class="form-box">
-                    <h3>Discord server</h3>
-                    <p><a href="https://discord.gg/fwd8tGC4Ya">Chat with people</a> from around the world.</p>
+                    <h3>Join the community</h3>
+                    <p><a href="https://discord.gg/fwd8tGC4Ya">Chat with people</a> from around the world in our Discord server.</p>
                 </div>
 
                 <div class="form-box">
@@ -1406,8 +1406,8 @@
 
                 <div id="mailing-list">
                     <div class="form-box">
-                        <h3>Mailing list</h3>
-                        <p>Receive updates as planning develops. There's no commitment. ♥</p>
+                        <h3>Subscribe to updates</h3>
+                        <p>Join the mailing list to updates as planning develops. There's no commitment. ♥</p>
                         <form enctype="application/x-www-form-urlencoded" id="form01" method="post" action="/sign-up" data-autofocus="1">
 
                             <div class="field" data-type="email">
