--- a/beta.rustforgeconf.com/index.html
+++ b/beta.rustforgeconf.com/index.html
@@ -1396,7 +1396,9 @@
                     <h3>Join the community</h3>
                     <p><a href="https://discord.gg/fwd8tGC4Ya">Chat with people</a> from around the world in our Discord server.</p>
                 </div>
+            </div>
 
+            <div class="section">
                 <div class="form-box">
                     <h3>Contact us</h3>
                     <p>Questions are welcome!</p>
