--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -1380,8 +1380,6 @@
 
 <div class="row">
     <div class="col">
-
-
         <div class="section" id="get-involved">
             <h2><span class="boost">Get involved</span> in the event</h2>
 
@@ -1396,50 +1394,56 @@
                     <h3>Join the community</h3>
                     <p><a href="https://discord.gg/fwd8tGC4Ya">Chat with people</a> from around the world in our Discord server.</p>
                 </div>
-
-                <div class="form-box">
-                    <h3>Contact us</h3>
-                    <p>Questions are welcome!</p>
-
-                    <p><em><a href="mailto:hello@rustforgeconf.com?subject=Considering%20(attending%7Cspeaking%7Cvolunteering)%20at%20Rust%20Forge%202025">&lt;hello@rustforgeconf.com&gt;</a></em></p>
-                </div>
-
-                <div id="mailing-list">
-                    <div class="form-box">
-                        <h3>Subscribe to updates</h3>
-                        <p>Join the mailing list to updates as planning develops. There's no commitment. ♥</p>
-                        <form enctype="application/x-www-form-urlencoded" id="form01" method="post" action="/sign-up" data-autofocus="1">
-
-                            <div class="field" data-type="email">
-                                <input type="email" name="email" placeholder="iloverust@example.com" maxlength="128" required="">
-                            </div>
-
-                            <div class="field" data-type="select">
-                                <select name="interested-in">
-                                    <option value="">– Interested In ... (optional) –</option>
-                                    <option value="Attending">Attending</option>
-                                    <option value="Speaking">Speaking</option>
-                                    <option value="Sponsoring">Sponsoring</option>
-                                    <option value="Organising">Organising</option>
-                                    <option value="Volunteering">Volunteering</option>
-                                    <option value="Something Else">Something Else</option>
-                                </select>
-                            </div>
-
-                            <div class="actions">
-                                <button type="submit" class="button">
-                                    form.submit()
-                                </button>
-                            </div>
-
-                            <input type="hidden" name="id" value="form01">
-                        </form>
-                    </div>
-                </div> <!-- /#mailing-list -->
             </div>
         </div> <!-- /#get-involved -->
+    </div>
+</div>
+
+<div class="row">
+    <div class="col">
+        <div class="section">
+            <h2><span class="boost">Learn</span> more</h2>
+
+            <div id="mailing-list">
+                <div class="form-box">
+                    <h3>Subscribe to updates</h3>
+                    <p>Join the mailing list to updates as planning develops. There's no commitment. ♥</p>
+                    <form enctype="application/x-www-form-urlencoded" id="form01" method="post" action="/sign-up" data-autofocus="1">
+
+                        <div class="field" data-type="email">
+                            <input type="email" name="email" placeholder="iloverust@example.com" maxlength="128" required="">
+                        </div>
+
+                        <div class="field" data-type="select">
+                            <select name="interested-in">
+                                <option value="">– Interested In ... (optional) –</option>
+                                <option value="Attending">Attending</option>
+                                <option value="Speaking">Speaking</option>
+                                <option value="Sponsoring">Sponsoring</option>
+                                <option value="Organising">Organising</option>
+                                <option value="Volunteering">Volunteering</option>
+                                <option value="Something Else">Something Else</option>
+                            </select>
+                        </div>
+
+                        <div class="actions">
+                            <button type="submit" class="button">
+                                form.submit()
+                            </button>
+                        </div>
+
+                        <input type="hidden" name="id" value="form01">
+                    </form>
+                </div>
+            </div> <!-- /#mailing-list -->
+        </div>
+    </div>
+</div>
 
 
+
+<div class="row">
+    <div class="col">
         <div class="section" id="what">
             <h2>
                 <span class="boost">What</span> is Rust Forge? </h2>
